[package]
name = "source-wrench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
eframe = "0.32.3"
egui_dock = "0.17.0"
indexmap = "2.9.0"
rfd = "0.15.3"
thiserror = "2.0.12"
kdtree = "0.7.0"
half = "2.4.1"
bitflags = "2.9.0"
notify = "8.0.0"
parking_lot = "0.12.4"
datamodel = "0.7.1"
glam = "0.30.8"
