[package]
name = "source-wrench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
eframe = "0.35.0"
egui_dock = "0.20.1"
indexmap = "2.14.0"
rfd = "0.17.2"
thiserror = "2.0.18"
kdtree = "0.8.0"
half = "2.7.1"
bitflags = "2.13.1"
notify = "8.2.0"
parking_lot = "0.12.5"
datamodel = "0.7.1"
glam = "0.33.2"
rayon = "1.12.0"
